Refactored sink- and added source connector

--- a/config/couchdb-sink.properties
+++ b/config/couchdb-sink.properties
@@ -1,18 +1,13 @@
 ### Kafka Connect settings ###
 
 # Unique name for the connector. Attempting to register again with the same name will fail
-name=CouchDBSinkConnector
+name=CouchDBConnector
 
-# The Java class for the connector
-connector.class=com.xebia.kafka.connect.couchdb.CouchDBSinkConnector
+connector.class="com.xebia.kafka.connect.couchdb.CouchDBSinkConnector"
 
 # The maximum number of tasks that should be created for this connector.
 # The connector may create fewer tasks if it cannot achieve this level of parallelism.
 tasks.max=1
-
-# A list of topics to use as input for this connector
-topics=couchdb-sink-example
-
 
 
 ### CouchDB connection settings ###
@@ -21,10 +16,17 @@ topics=couchdb-sink-example
 host="127.0.0.1"
 port=5984
 
+# Whether we connect to CouchDB over SSL
+# !! This should be true if your CouchDB instance is connected to the open internet !!
+ssl=false
+
+# When using SSL you need to provide a trust store loaded withe the certificate(s) you trust
+#ssl-truststore-path=path/to/your/truststore.pks
+#ssl-truststore-password=
+
 # The username and password used for authenticating with CouchDB, leave empty for public databases
 username=""
 password=""
-
 
 
 ### Kafka to CouchDB interfacing settings ###
@@ -35,9 +37,13 @@ password=""
 # The key/value pairs should follow the following syntax: {topic}/{database}
 topics-to-databases-mapping="couchdb-sink-example/couchdb-sink-example"
 
-# A comma separated list of key/value pairs specifying which field in an object from a specific Kafka topic
-# should be used to check if a previous version of that object is already present in the database.
-# This will decide if a new document will be created or an existing one will be updated.
-# An index needs to be present for the given field in CouchDB.
-# The key/value pairs should follow the following syntax: {topic}/{field}
-topics-to-id-fields-mapping="topics-to-id-fields-mapping/airport"
+# The converter class to use (see com.xebia.kafka.connect.couchdb.converting.Converter)
+converter="com.xebia.kafka.connect.couchdb.converting.JSONConverter"
+# The merger class to use (see com.xebia.kafka.connect.couchdb.merging.Merger)
+merger="com.xebia.kafka.connect.couchdb.merging.LatestWinsMerger"
+
+# How many times the connector should attempt to fetch conflicting docs
+max-conflicting-docs-fetch-retries=5
+# How many items should be fetched from the source data queue before sending them to Kafka
+max-source-batch-size=12
+
