--- a/config/couchdb-source.properties
+++ b/config/couchdb-source.properties
@@ -1,3 +1,49 @@
-name=CouchDBSourceConnector
-connector.class=com.xebia.kafka.connect.couchdb.CouchDBSourceConnector
+### Kafka Connect settings ###
+
+# Unique name for the connector. Attempting to register again with the same name will fail
+name=CouchDBConnector
+
+connector.class="com.xebia.kafka.connect.couchdb.CouchDBSourceConnector"
+
+# The maximum number of tasks that should be created for this connector.
+# The connector may create fewer tasks if it cannot achieve this level of parallelism.
 tasks.max=1
+
+
+### CouchDB connection settings ###
+
+# The host name and port where CouchDB is reachable on
+host="127.0.0.1"
+port=5984
+
+# Whether we connect to CouchDB over SSL
+# !! This should be true if your CouchDB instance is connected to the open internet !!
+ssl=false
+
+# When using SSL you need to provide a trust store loaded withe the certificate(s) you trust
+#ssl-truststore-path=path/to/your/truststore.pks
+#ssl-truststore-password=
+
+# The username and password used for authenticating with CouchDB, leave empty for public databases
+username=""
+password=""
+
+
+### Kafka to CouchDB interfacing settings ###
+
+# A comma separated list of key/value pairs specifying which Kafka topic should be stored in which
+# CouchDB database.
+# The database will need to be present in CouchDB.
+# The key/value pairs should follow the following syntax: {topic}/{database}
+topics-to-databases-mapping="couchdb-sink-example/couchdb-sink-example"
+
+# The converter class to use (see com.xebia.kafka.connect.couchdb.converting.Converter)
+converter="com.xebia.kafka.connect.couchdb.converting.JSONConverter"
+# The merger class to use (see com.xebia.kafka.connect.couchdb.merging.Merger)
+merger="com.xebia.kafka.connect.couchdb.merging.LatestWinsMerger"
+
+# How many times the connector should attempt to fetch conflicting docs
+max-conflicting-docs-fetch-retries=5
+# How many items should be fetched from the source data queue before sending them to Kafka
+max-source-batch-size=12
+
