Gave sink and source connector unique name in config

--- a/config/couchdb-sink.properties
+++ b/config/couchdb-sink.properties
@@ -1,7 +1,7 @@
 ### Kafka Connect settings ###
 
 # Unique name for the connector. Attempting to register again with the same name will fail
-name=CouchDBConnector
+name=CouchDBSinkConnector
 
 connector.class="com.xebia.kafka.connect.couchdb.CouchDBSinkConnector"
 
