Corrected String notation in properties files, moved them to resources

--- a/src/main/resources/couchdb-source.properties
+++ b/src/main/resources/couchdb-source.properties
@@ -3,7 +3,7 @@
 # Unique name for the connector. Attempting to register again with the same name will fail
 name=CouchDBSourceConnector
 
-connector.class="com.xebia.kafka.connect.couchdb.CouchDBSourceConnector"
+connector.class=com.xebia.kafka.connect.couchdb.CouchDBSourceConnector
 
 # The maximum number of tasks that should be created for this connector.
 # The connector may create fewer tasks if it cannot achieve this level of parallelism.
@@ -13,7 +13,7 @@ tasks.max=1
 ### CouchDB connection settings ###
 
 # The host name and port where CouchDB is reachable on
-host="127.0.0.1"
+host=127.0.0.1
 port=5984
 
 # Whether we connect to CouchDB over SSL
@@ -25,8 +25,8 @@ ssl=false
 #ssl-truststore-password=
 
 # The username and password used for authenticating with CouchDB, leave empty for public databases
-username=""
-password=""
+username=
+password=
 
 
 ### Kafka to CouchDB interfacing settings ###
@@ -35,12 +35,12 @@ password=""
 # CouchDB database.
 # The database will need to be present in CouchDB.
 # The key/value pairs should follow the following syntax: {topic}/{database}
-topics-to-databases-mapping="couchdb-sink-example/couchdb-sink-example"
+topics-to-databases-mapping=couchdb-sink-example/couchdb-sink-example
 
 # The converter class to use (see com.xebia.kafka.connect.couchdb.converting.Converter)
-converter="com.xebia.kafka.connect.couchdb.converting.JSONConverter"
+converter=com.xebia.kafka.connect.couchdb.converting.JSONConverter
 # The merger class to use (see com.xebia.kafka.connect.couchdb.merging.Merger)
-merger="com.xebia.kafka.connect.couchdb.merging.LatestWinsMerger"
+merger=com.xebia.kafka.connect.couchdb.merging.LatestWinsMerger
 
 # How many times the connector should attempt to fetch conflicting docs
 max-conflicting-docs-fetch-retries=5
