Removed redundant Converter interface and using the Kafka connect one

--- a/src/main/resources/couchdb-sink.properties
+++ b/src/main/resources/couchdb-sink.properties
@@ -37,8 +37,8 @@ password=
 # The key/value pairs should follow the following syntax: {topic}/{database}
 topics-to-databases-mapping=couchdb-example/couchdb-example
 
-# The converter class to use (see com.xebia.kafka.connect.couchdb.converting.Converter)
-converter=com.xebia.kafka.connect.couchdb.converting.JSONConverter
+# The converter class to use (see org.apache.kafka.connect.storage.Converter)
+converter=org.apache.kafka.connect.json.JsonConverter
 # The merger class to use (see com.xebia.kafka.connect.couchdb.merging.Merger)
 merger=com.xebia.kafka.connect.couchdb.merging.LatestWinsMerger
 
