Made topic/database mappings specific for sink and source

--- a/src/main/resources/couchdb-sink.properties
+++ b/src/main/resources/couchdb-sink.properties
@@ -35,7 +35,11 @@ password=
 # CouchDB database.
 # The database will need to be present in CouchDB.
 # The key/value pairs should follow the following syntax: {topic}/{database}
-topics-to-databases-mapping=couchdb-example/couchdb-example
+sink-topics-to-databases-mapping=kafka-example/couchdb-example
+# A comma separated list of key/value pairs specifying which CouchDB database should be published to which
+# Kafka topic.
+# The key/value pairs should follow the following syntax: {topic}/{database}
+source-topics-to-databases-mapping=kafka-example/couchdb-example
 
 # The converter class to use (see org.apache.kafka.connect.storage.Converter)
 converter=org.apache.kafka.connect.json.JsonConverter
