Added mechanism for extracting id's for CouchDB from Kafka record values

--- a/src/main/resources/couchdb-sink.properties
+++ b/src/main/resources/couchdb-sink.properties
@@ -41,6 +41,11 @@ sink-topics-to-databases-mapping=kafka-example/couchdb-example
 # The key/value pairs should follow the following syntax: {topic}/{database}
 source-topics-to-databases-mapping=kafka-example/couchdb-example
 
+# A comma separated list of key/value pairs specifying which field from a Kafka record's value should be used
+# as the ID.
+# The key/value pairs should follow the following syntax: {topic}/{id field name}
+topics-to-id-fields-mapping=kafka-example/id-field-example
+
 # The converter class to use (see org.apache.kafka.connect.storage.Converter)
 converter=org.apache.kafka.connect.json.JsonConverter
 # The merger class to use (see com.xebia.kafka.connect.couchdb.merging.Merger)
