Added mechanism for configuring changes since setting per source db

--- a/src/main/resources/couchdb-sink.properties
+++ b/src/main/resources/couchdb-sink.properties
@@ -46,6 +46,12 @@ source-topics-to-databases-mapping=kafka-example/couchdb-example
 # The key/value pairs should follow the following syntax: {topic}/{id field name}
 topics-to-id-fields-mapping=kafka-example/id-field-example
 
+# A comma separated list of key/value pairs specifying which changes should be published per database.
+# '0' specifies all changes since the beginning of time.
+# 'now' specifies all changes after the connector starts listening.
+# A specific update sequence ID specifies changes since that update.
+databases-to-changes-since-mapping=couchdb-example/0
+
 # The converter class to use (see org.apache.kafka.connect.storage.Converter)
 converter=org.apache.kafka.connect.json.JsonConverter
 # The merger class to use (see com.xebia.kafka.connect.couchdb.merging.Merger)
