Added topics configuration

--- a/src/main/resources/couchdb-sink.properties
+++ b/src/main/resources/couchdb-sink.properties
@@ -9,6 +9,8 @@ connector.class=com.xebia.kafka.connect.couchdb.CouchDBSinkConnector
 # The connector may create fewer tasks if it cannot achieve this level of parallelism.
 tasks.max=1
 
+# Read from these Kafka topics (comma-separated list).
+topics=kafka-example
 
 ### CouchDB connection settings ###
 
