--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,27 @@ cache:
   directories:
   - "$HOME/.m2"
 
+before_install:
+  - if [ ! -z "$GPG_SECRET_KEYS" ]; then echo $GPG_SECRET_KEYS | base64 --decode | $GPG_EXECUTABLE --import; fi
+  - if [ ! -z "$GPG_OWNERTRUST" ]; then echo $GPG_OWNERTRUST | base64 --decode | $GPG_EXECUTABLE --import-ownertrust; fi
+
 after_success:
 - bash <(curl -s https://codecov.io/bash)
-- "[[ $TRAVIS_BRANCH == 'master' && $TRAVIS_PULL_REQUEST == 'false' ]] && mvn deploy -DskipTests --settings settings.xml"
+
+deploy:
+  -
+    provider: script
+    script: deploy/deploy.sh
+    skip_cleanup: true
+    on:
+      repo: xebia/kafka-connect-couchdb
+      branch: master
+      jdk: oraclejdk8
+  -
+    provider: script
+    script: deploy/deploy.sh
+    skip_cleanup: true
+    on:
+      repo: xebia/kafka-connect-couchdb
+      tags: true
+      jdk: oraclejdk8
