--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     <version>0.1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>Kafka connector for CouchDB</name>
+    <name>${project.groupId}:${project.artifactId}</name>
     <description>
         A Kafka Connect implementation for sending data between Kafka and CouchDB.
     </description>
@@ -357,6 +357,10 @@
             <id>ossrh</id>
             <url>https://oss.sonatype.org/content/repositories/snapshots</url>
         </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
     </distributionManagement>
 
     <profiles>
