Added namespace to config keys

--- a/src/main/resources/couchdb-sink.properties
+++ b/src/main/resources/couchdb-sink.properties
@@ -15,20 +15,20 @@ topics=kafka-example
 ### CouchDB connection settings ###
 
 # The host name and port where CouchDB is reachable on
-host=127.0.0.1
-port=5984
+couchdb.host=127.0.0.1
+couchdb.port=5984
 
 # Whether we connect to CouchDB over SSL
 # !! This should be true if your CouchDB instance is connected to the open internet !!
-ssl=false
+couchdb.ssl=false
 
 # When using SSL you need to provide a trust store loaded withe the certificate(s) you trust
-#ssl-truststore-path=path/to/your/truststore.pks
-#ssl-truststore-password=
+#couchdb.ssl-truststore-path=path/to/your/truststore.pks
+#couchdb.ssl-truststore-password=
 
 # The username and password used for authenticating with CouchDB, leave empty for public databases
-username=
-password=
+couchdb.username=
+couchdb.password=
 
 
 ### Kafka to CouchDB interfacing settings ###
@@ -37,30 +37,30 @@ password=
 # CouchDB database.
 # The database will need to be present in CouchDB.
 # The key/value pairs should follow the following syntax: {topic}/{database}
-sink-topics-to-databases-mapping=kafka-example/couchdb-example
+couchdb.sink-topics-to-databases-mapping=kafka-example/couchdb-example
 # A comma separated list of key/value pairs specifying which CouchDB database should be published to which
 # Kafka topic.
 # The key/value pairs should follow the following syntax: {topic}/{database}
-source-topics-to-databases-mapping=kafka-example/couchdb-example
+couchdb.source-topics-to-databases-mapping=kafka-example/couchdb-example
 
 # A comma separated list of key/value pairs specifying which field from a Kafka record's value should be used
 # as the ID.
 # The key/value pairs should follow the following syntax: {topic}/{id field name}
-topics-to-id-fields-mapping=kafka-example/id-field-example
+couchdb.topics-to-id-fields-mapping=kafka-example/id-field-example
 
 # A comma separated list of key/value pairs specifying which changes should be published per database.
 # '0' specifies all changes since the beginning of time.
 # 'now' specifies all changes after the connector starts listening.
 # A specific update sequence ID specifies changes since that update.
-databases-to-changes-since-mapping=couchdb-example/0
+couchdb.databases-to-changes-since-mapping=couchdb-example/0
 
 # The converter class to use (see org.apache.kafka.connect.storage.Converter)
-converter=org.apache.kafka.connect.json.JsonConverter
+couchdb.converter=org.apache.kafka.connect.json.JsonConverter
 # The merger class to use (see com.xebia.kafka.connect.couchdb.merging.Merger)
-merger=com.xebia.kafka.connect.couchdb.merging.LatestWinsMerger
+couchdb.merger=com.xebia.kafka.connect.couchdb.merging.LatestWinsMerger
 
 # How many times the connector should attempt to fetch conflicting docs
-max-conflicting-docs-fetch-retries=5
+couchdb.max-conflicting-docs-fetch-retries=5
 # How many items should be fetched from the source data queue before sending them to Kafka
-max-source-batch-size=12
+couchdb.max-source-batch-size=12
 
